<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/cal_btn_dot"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_dot" app:layout_constraintStart_toEndOf="@+id/btn_zero"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_3"/>
    <Button
            android:text="@string/cal_btn_change"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_change"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_1"/>
    <Button
            android:text="@string/cal_btn_nun"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_nun" app:layout_constraintStart_toEndOf="@+id/btn_dot"
            android:layout_marginLeft="12dp" android:layout_marginStart="12dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_add" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/cal_btn_zero"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_zero" app:layout_constraintStart_toEndOf="@+id/btn_change"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_2"/>
    <Button
            android:text="@string/cal_btn_add"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_add" app:layout_constraintStart_toEndOf="@+id/btn_3"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_sub"/>
    <Button
            android:text="@string/cal_btn_3"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_3" app:layout_constraintStart_toEndOf="@+id/btn_2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_6"/>
    <Button
            android:text="@string/cal_btn_2"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_2" app:layout_constraintStart_toEndOf="@+id/btn_1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_5"/>
    <Button
            android:text="@string/cal_btn_1"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_4"/>
    <Button
            android:text="@string/cal_btn_sub"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_sub" app:layout_constraintStart_toEndOf="@+id/btn_6"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_multiply"/>
    <Button
            android:text="@string/cal_btn_6"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_6" app:layout_constraintStart_toEndOf="@+id/btn_5"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_9"/>
    <Button
            android:text="@string/cal_btn_5"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_5" app:layout_constraintStart_toEndOf="@+id/btn_4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_8"/>
    <Button
            android:text="@string/cal_btn_4"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_7"/>
    <Button
            android:text="@string/cal_btn_multiply"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_multiply" app:layout_constraintStart_toEndOf="@+id/btn_9"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_divide"/>
    <Button
            android:text="@string/cal_btn_9"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_9" app:layout_constraintStart_toEndOf="@+id/btn_8"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_percentage"/>
    <Button
            android:text="@string/cal_btn_8"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_8" app:layout_constraintStart_toEndOf="@+id/btn_7" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_bracket"/>
    <Button
            android:text="@string/cal_btn_7"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_7"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textPersonName"
            android:text="계산기"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_input"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="parent" android:singleLine="false"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>
    <Button
            android:text="@string/cal_btn_c"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_clear"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_input" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/cal_btn_bracket"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_bracket" app:layout_constraintStart_toEndOf="@+id/btn_clear"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_input"/>
    <Button
            android:text="@string/cal_btn_percentage"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_percentage" app:layout_constraintStart_toEndOf="@+id/btn_bracket"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_input"/>
    <Button
            android:text="@string/cal_btn_divide"
            android:layout_width="90dp"
            android:layout_height="46dp"
            android:id="@+id/btn_divide" app:layout_constraintStart_toEndOf="@+id/btn_percentage"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_input" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                                android:orientation="vertical"/>
    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                            android:id="@+id/group"/>
</androidx.constraintlayout.widget.ConstraintLayout>